--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: webviewx
 description: A feature-rich cross-platform webview using webview_flutter for mobile and iframe for web. JS interop-ready.
 homepage: https://github.com/adrianflutur/webviewx
-version: 0.0.2
+version: 0.0.3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -14,7 +14,7 @@ dependencies:
   webview_flutter: ^1.0.5
   pointer_interceptor: ^0.8.0+1
   pedantic: ^1.9.2
-  uuid: ^2.2.2
+  uuid: 3.0.3
   meta: ^1.2.2
   path: ^1.7.0
 
